examples/demo/css/demo.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');


html, body {
    font-family: Roboto, sans-serif;
    color: light-dark(#202020, #F0F0F0);
}





#prev-next-container {
    position: fixed;
    left: 45%;
    transform: translateX(-50%);
    bottom: 3vh;
    height: 3rem;
    width: fit-content;

    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 2rem;
    padding: 1em 1em;

    z-index: 100;

    background-color: light-dark(white, #0F1419);
    box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.3);
    border-radius: 3rem;
}



.nav-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 3em;
    height: 3em;
    border-radius: 3rem;
    border: none;
    background-color: #1565c1;  
    cursor: pointer;
    


}

.nav-btn:hover {
    background-color: #1052AD;
}

#prev-next-container img {
    height: 1.7rem;
    /* width: 3rem; */
}



#scene-info {
    position: fixed;
    right: 1vh;
    bottom: 2vh;

    display: flex;
    flex-direction: column;
    align-items: center;

    width: min(60vw, 40vh); 
    max-height: 40vh;
    /* padding: 2vh 3vh; */
    border-radius: 1rem;
    background-color: light-dark(white, #0F1419);
    backdrop-filter: blur(0.5vh);
    z-index: 100;
    box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.3);
}



#logo-container {
    width: 100%;
    box-sizing: border-box;
    border-bottom: #E1EBF5 solid 1px;
    padding: 2vh 50%;

    display: flex;
    justify-content: center;
}

#itowns-logo {
    height: 2.3rem;
}

#info-bottom-container {
    padding: 0.5vh 2vh 2vh 2vh;
}


/*
#scene-info hr {
    
}
*/


#textContainer {
    position: static;

    display: flex;
    flex-direction: column;

    /* color: black; */
    /* text-align: center; */
}

#info-bottom-container .scene-number-info {
    background-color: light-dark(#F0F6FF, #09184b);
    border-radius: 0.5em;
    color: #1565c1;
    padding: 0.2em 0.4em;
    width:fit-content;
    margin: 0;
    margin-top: 1em;

}



#sceneTitle {
    color: light-dark(#1565c1, #8CC1EE);
    text-transform: uppercase;
    font-weight: 500;
    font-size: 2.3vh;
    
}


/*** Navigation Menu ***/
#navigation-container {
    position: static;

    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    
    width: 100%;
    gap: 1vh;
    margin-top: 2vh;
}

#navigation-container button {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 0.8em;

    padding: 0.5vh 0.8vh;
    border-style: none;
    text-align: center;
    font-weight: bold;
    background-color: light-dark(white, #0F1419);
    color: light-dark(#1565c1, #8CC1EE);
    text-transform: uppercase;
    border-radius: 15px;
    /* font-size: min(1vh, 1.5vw); */

    
    white-space: nowrap; 
    flex-shrink: 0;
    

    cursor: pointer;
}

#navigation-container button:hover {
    background-color: #CEE5FB;
}

.nav-logo  {
    height: 1.5rem;
}


button:hover {
    background-color: #E5E5E5;
    color: black;
}

button:disabled {
    background-color: #E5E5E5;
    color: #A0A0A0;
    cursor: not-allowed;
}

button:active {
    background-color: #7EA8C5;
    color: white;
}

button.active {
    background-color: #7EA8C5;
    color: white;
}

#sceneDots {
    display: flex;
    flex-direction: column;
    gap: min(1vh, 1.5vw);
    align-items: center;
    position: fixed;
    left: 2rem;
    top: 30%;
    z-index: 100;   
}

.scene-dot {
    width: min(1.5vh, 2vw);
    height: min(1.5vh, 2vw);
    border-radius: 50%;
    /* border: 1px solid #000; */
    background-color: #ffffff;
    cursor: pointer;
    transition: transform 0.15s ease, background-color 0.15s ease;
}

.scene-dot.active {
    background-color: #1565c1;
    transform: scale(1.4);
}

.scene-dot:hover {
    background-color: #E5E5E5;
}

/*** Feature Picking Info ***/
#feature-picking-info {
    position: fixed;
    top: 1vh;
    right: 1vh;
    padding: 0.2vh 2vh 1vh 2vh;
    border-radius: 1vh;
    overflow-y: auto;

    font-size: min(1.5vh, 2vw);
    color: black;

    max-width: 25vw;
    max-height: 45vh;
    background-color: white;
    box-shadow:  0 4px 8px 0 rgba(0, 0, 0, 0.3);

    z-index: 100;

    pointer-events: auto;
}

#feature-picking-info.no-feature-selected {
    padding: 1vh 1vh;
} 


.feature-name {
    text-transform: uppercase;
    color: #1565c1;
    font-size: 1.2rem;
}

/*** Point Cloud Config ***/
#point-cloud-config {
    position: fixed;
    top: 1vh;
    left: 1vh;
    padding: 1vh 1.5vh;
    border-radius: 1vh;

    display: flex;
    flex-direction: column;
    justify-content: center;

    font-size: min(1.5vh, 2vw);
    color: black;

    width: 25vw;
    max-height: 45vh;
    background-color: rgba(255, 255, 255, 0.75);
    backdrop-filter: blur(0.5vh);

    z-index: 100;
}

#point-cloud-buttons {
    width: 100%;
    display: flex;
    justify-self: center;
}

#point-cloud-config button {
    width: 50%;
}

#point-cloud-config button:first-child {
    border-right: none;
    border-radius: 0.5rem 0 0 0.5rem;
}

#point-cloud-config button:last-child {
    border-left: none;
    border-radius: 0 0.5rem 0.5rem 0;
}

